--- a/params/default/prepare_libraries_spectra.yaml
+++ b/params/default/prepare_libraries_spectra.yaml
@@ -35,8 +35,8 @@ files:
 
         #' List of raw in silico spectral libraries. STRING
         raw:
-         - data/source/libraries/spectra/is/isdb_pos.mgf
-         - data/source/libraries/spectra/is/isdb_neg.mgf
+         - data/source/libraries/spectra/is/lotus_pos.rds
+         - data/source/libraries/spectra/is/lotus_neg.rds
 
 #' MS related parameters.
 ms:
