--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -11,8 +11,8 @@ name: test-coverage
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
-    # env:
-      # GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v3
@@ -36,13 +36,9 @@ jobs:
         run: |
           covr::codecov(
             quiet = FALSE,
-            clean = FALSE
+            clean = FALSE,
+            install_path = file.path(Sys.getenv("RUNNER_TEMP"), "package")
           )
-          # covr::codecov(
-            # quiet = FALSE,
-            # clean = FALSE,
-            # install_path = file.path(Sys.getenv("RUNNER_TEMP"), "package")
-          # )
         shell: Rscript {0}
 
       - name: Show testthat output
