--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Imports:
     shinybusy (>= 0.3.1),
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
+    shinyvalidate (>=0.1.2),
     shinyWidgets (>= 0.7.6),
     Spectra (>= 1.9.15),
     stats,
