--- a/params/default/weight_annotations.yaml
+++ b/params/default/weight_annotations.yaml
@@ -34,6 +34,9 @@ annotations:
 #' Files.
 files:
 
+  #' Pattern to identify the files. STRING
+  pattern: example
+
   #' Annotations files.
   annotations:
 
@@ -46,7 +49,7 @@ files:
       # - data/interim/annotations/example_exp_rt_prepared.tsv.gz
     
     #' Final results file. STRING
-    processed: example_results.tsv
+    processed: annotations.tsv
 
     #' Structure organism pairs libraries.
     sop:
