--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,44 +15,28 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.1.0)
 Imports:
-    BiocManager (>= 1.30.20),
     BiocParallel (>= 1.32.6),
-    bs4Dash (>= 2.2.1),
-    clustermq (>= 0.8.95.5),
     CompoundDb (>= 1.3.3),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.1),
-    future (>= 1.32.0),
-    gt (>= 0.9.0),
     httr (>= 1.4.5),
     igraph (>= 1.4.2),
     jsonlite (>= 1.8.4),
-    markdown (>= 1.6),
     MetaboAnnotation (>= 1.3.2),
     MsBackendMgf (>= 1.7.5),
-    MsCoreUtils (>= 1.11.5),
+    MsCoreUtils (>= 1.11.6),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
-    pingr (>= 2.0.2),
     readr (>= 2.1.4),
     rotl (>= 3.0.14),
-    rstudioapi (>= 0.14),
-    shiny (>= 1.7.4),
-    shinybusy (>= 0.3.1),
-    shinyhelper (>= 0.3.2),
-    shinyjs (>= 2.1.0),
-    shinyvalidate (>= 0.1.2),
-    shinyWidgets (>= 0.7.6),
+    rlang (>= 1.1.0),
     Spectra (>= 1.9.15),
     stats,
     stringr (>= 1.5.0),
-    targets (>= 0.14.3),
-    tarchetypes (>= 0.7.5),
     tibble (>= 3.2.1),
     tidyr (>= 1.3.0),
     utils,
-    visNetwork (>= 2.1.2),
     yaml (>= 2.3.7)
 Remotes:
     RforMassSpectrometry/CompoundDb,
@@ -61,9 +45,26 @@ Remotes:
     RforMassSpectrometry/MsCoreUtils,
     RforMassSpectrometry/Spectra
 Suggests: 
+    BiocManager (>= 1.30.20),
+    bs4Dash (>= 2.2.1),
+    clustermq (>= 0.8.95.5),
+    future (>= 1.32.0),
+    gt (>= 0.9.0),
     knitr (>= 1.42),
+    markdown (>= 1.6),
+    pingr (>= 2.0.2),
+    rstudioapi (>= 0.14),
+    shiny (>= 1.7.4),
+    shinyWidgets (>= 0.7.6),
+    shinybusy (>= 0.3.1),
+    shinyhelper (>= 0.3.2),
+    shinyjs (>= 2.1.0),
+    shinyvalidate (>= 0.1.2),
     spelling (>= 2.2.1),
-    testthat (>= 3.1.7)
+    targets (>= 0.14.3),
+    tarchetypes (>= 0.7.5),
+    testthat (>= 3.1.7),
+    visNetwork (>= 2.1.2)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
@@ -97,6 +98,7 @@ Collate:
     'get_last_version_from_zenodo.R'
     'get_organism_taxonomy_ott.R'
     'get_params.R'
+    'globals.R'
     'harmonize_names_sirius.R'
     'harmonize_spectra.R'
     'import_spectra.R'
