--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -123,6 +123,7 @@ Collate:
     'prepare_libraries_spectra.R'
     'prepare_taxa.R'
     'round_reals.R'
+    'remove_above_precursor.R'
     'replace_id.R'
     'sanitize_spectra.R'
     'split_tables_sop.R'
