--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
+export(remove_above_precursor)
 export(replace_id)
 export(round_reals)
 export(sanitize_spectra)
