--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
-Version: 2.8.0
+Version: 2.8.1
 Authors@R: c(
     person("Adriano", "Rutz", , "rutz@imsb.biol.ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0443-9902")),
@@ -15,26 +15,25 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
-    BiocParallel (>= 1.34.0),
+    BiocParallel (>= 1.34.1),
     CompoundDb (>= 1.4.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.2),
-    httr (>= 1.4.5),
-    igraph (>= 1.4.2),
+    httr (>= 1.4.6),
+    igraph (>= 1.4.3),
     jsonlite (>= 1.8.4),
-    MetaboAnnotation (>= 1.4.0),
+    MetaboAnnotation (>= 1.4.1),
     MsBackendMgf (>= 1.8.0),
     MsCoreUtils (>= 1.12.0),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
-    readr (>= 2.1.4),
     rotl (>= 3.0.14),
     Spectra (>= 1.10.1),
     stats,
-    stringr (>= 1.5.0),
-    tibble (>= 3.2.1),
-    tidyr (>= 1.3.0),
+    stringi (>= 1.7.12),
+    tidytable (>= 0.10.1),
+    tidyfst (>= 1.7.6),
     utils,
     yaml (>= 2.3.7)
 Suggests: 
@@ -44,7 +43,7 @@ Suggests:
     future (>= 1.32.0),
     gt (>= 0.9.0),
     knitr (>= 1.42),
-    markdown (>= 1.6),
+    markdown (>= 1.7),
     pingr (>= 2.0.2),
     rstudioapi (>= 0.14),
     shiny (>= 1.7.4),
@@ -54,9 +53,9 @@ Suggests:
     shinyjs (>= 2.1.0),
     shinyvalidate (>= 0.1.2),
     spelling (>= 2.2.1),
-    targets (>= 1.0.0),
+    targets (>= 1.1.3),
     tarchetypes (>= 0.7.6),
-    testthat (>= 3.1.7),
+    testthat (>= 3.1.8),
     visNetwork (>= 2.1.2)
 Config/testthat/edition: 3
 Encoding: UTF-8
