--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
-    BiocParallel (>= 1.34.1),
+    BiocParallel (>= 1.34.2),
     CompoundDb (>= 1.4.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
@@ -28,7 +28,7 @@ Imports:
     MsCoreUtils (>= 1.12.0),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
-    R.utils,
+    R.utils (>= 2.12.2),
     rotl (>= 3.0.14),
     Spectra (>= 1.10.1),
     stats,
