--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - 'main'
 
+env:
+  TEST_TAG: adafede/tima-r:test
+  LATEST_TAG: adafede/tima-r:latest
+  
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -34,7 +38,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v4
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: .
+          load: true
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ env.TEST_TAG }} 
+      -
+        name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
         with:
           cache-from: type=gha
@@ -42,4 +60,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: adafede/tima-r:latest
+          tags: ${{ env.LATEST_TAG }}
