--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,9 @@ on:
 env:
   TEST_TAG: adafede/tima-r:test
   LATEST_TAG: adafede/tima-r:latest
-  
+  DOCKER_ARGS: -v ./params:/params -v ./inst:/inst -v ./data:/data
+  DOCKER_COMMAND: Rscript inst/scripts/tima_mini.R
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -49,7 +51,7 @@ jobs:
       -
         name: Test
         run: |
-          docker run --rm ${{ env.TEST_TAG }}
+          docker run --rm ${{ env.DOCKER_ARGS }} ${{ env.TEST_TAG }} ${{ env.DOCKER_COMMAND }}
       -
         name: Build and push
         uses: docker/build-push-action@v4
