--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,8 +8,8 @@ on:
 env:
   TEST_TAG: adafede/tima-r:test
   LATEST_TAG: adafede/tima-r:latest
-  DOCKER_ARGS: -v ./params:/params -v ./inst:/inst -v ./data:/data
-  DOCKER_COMMAND: Rscript inst/scripts/tima_mini.R
+  DOCKER_ARGS: '-v ./params:/params -v ./inst:/inst -v ./data:/data'
+  DOCKER_COMMAND: 'Rscript inst/scripts/tima_mini.R'
 
 jobs:
   docker:
