--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Imports:
     parallelly (>= 1.36.0),
     pbmcapply (>= 1.5.1),
     R.utils (>= 2.12.2),
-    rotl (>= 3.0.14),
+    rotl (>= 3.1.0),
     Spectra (>= 1.10.1),
     stats,
     stringi (>= 1.7.12),
@@ -38,26 +38,26 @@ Imports:
     utils,
     yaml (>= 2.3.7)
 Suggests: 
-    BiocManager (>= 1.30.20),
-    bs4Dash (>= 2.2.1),
-    clustermq (>= 0.8.95.5),
-    future (>= 1.32.0),
-    gt (>= 0.9.0),
-    knitr (>= 1.43),
-    markdown (>= 1.7),
-    pingr (>= 2.0.2),
-    rstudioapi (>= 0.14),
-    shiny (>= 1.7.4),
-    shinyWidgets (>= 0.7.6),
-    shinybusy (>= 0.3.1),
-    shinyhelper (>= 0.3.2),
-    shinyjs (>= 2.1.0),
-    shinyvalidate (>= 0.1.2),
-    spelling (>= 2.2.1),
-    targets (>= 1.1.3),
-    tarchetypes (>= 0.7.6),
-    testthat (>= 3.1.8),
-    visNetwork (>= 2.1.2)
+    BiocManager,
+    bs4Dash,
+    clustermq,
+    future,
+    gt,
+    knitr,
+    markdown,
+    pingr,
+    rstudioapi,
+    shiny,
+    shinyWidgets,
+    shinybusy,
+    shinyhelper,
+    shinyjs,
+    shinyvalidate,
+    spelling,
+    targets,
+    tarchetypes,
+    testthat,
+    visNetwork
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
