--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Additional step for tests to run
         run: |
           cp -R paths.yaml tests/testthat/paths.yaml
-          cp -R params tests/testthat/params
+          cp -R tools tests/testthat/tools
           cp -R inst tests/testthat/inst
           cp -R R tests/testthat/R
 
