--- a/.github/workflows/rworkflows.yml
+++ b/.github/workflows/rworkflows.yml
@@ -6,6 +6,8 @@ name: rworkflows
   pull_request:
     branches:
     - main
+env:
+      GITHUB_PAT: ${{ secrets.PAT_GITHUB }}
 jobs:
   rworkflows:
     runs-on: ${{ matrix.config.os }}
@@ -16,8 +18,20 @@ jobs:
       matrix:
         config:
         - os: ubuntu-latest
+          bioc: devel
+          r: auto
+          cont: bioconductor/bioconductor_docker:devel
+          rspm: https://packagemanager.rstudio.com/cran/__linux__/focal/release
         - os: macOS-latest
+          bioc: release
+          r: auto
+          cont: ~
+          rspm: ~
         - os: windows-latest
+          bioc: release
+          r: auto
+          cont: ~
+          rspm: ~
     steps:
     - uses: neurogenomics/rworkflows@master
       with:
