--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -54,7 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
           DISABLE_ERRORS_LINTERS: SPELL, MARKDOWN_MARKDOWN_LINK_CHECK, REPOSITORY_KICS, REPOSITORY_CHECKOV, R_LINTR, COPYPASTE_JSCPD
-          FILTER_REGEX_EXCLUDE: .*LICENSE
+          FILTER_REGEX_EXCLUDE: .*LICENSE .*NEWS
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
