--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -50,20 +50,7 @@ jobs:
         env:
           # All available variables are described in documentation
           # https://megalinter.io/configuration/
-          VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }} # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
-          APPLY_FIXES: all
-          DISABLE_ERRORS_LINTERS: 
-            - SPELL
-            - MARKDOWN_MARKDOWN_LINK_CHECK
-            - REPOSITORY_KICS
-            - REPOSITORY_CHECKOV
-            - R_LINTR
-            - COPYPASTE_JSCPD
-          MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|docs/NEWS\.md)'
-          MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
-          PRINT_ALL_FILES: false
+          MEGALINTER_CONFIG: .github/linters/.mega-linter.yml
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
