--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -5,12 +5,14 @@ APPLY_FIXES: all
 # ENABLE: # If you use ENABLE variable, all other languages/formats/tooling formats will be disabled by default
 # ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
 DISABLE_ERRORS_LINTERS:
-  - SPELL
-  - MARKDOWN_MARKDOWN_LINK_CHECK
-  - REPOSITORY_KICS
-  - REPOSITORY_CHECKOV
-  - R_LINTR
   - COPYPASTE_JSCPD
+  - MARKDOWN_MARKDOWN_LINK_CHECK
+  - R_LINTR
+  - REPOSITORY_CHECKOV
+  - REPOSITORY_GITLEAKS
+  - REPOSITORY_KICS
+  - REPOSITORY_TRIVY
+  - SPELL_CSPELL
 MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|docs/NEWS\.md)'
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 PRE_COMMANDS:
