--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -11,6 +11,7 @@ on:
   pull_request:
     branches:
       - "main"
+      - "dev"
   workflow_dispatch:
 
 env: # Comment env block if you do not want to apply fixes
