improve code redundancy

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ Collate:
     'annotate_spectra.R'
     'clean_bio.R'
     'clean_chemo.R'
+    'clean_collapse.R'
     'complement_metadata_structures.R'
     'create_adducts_neg.R'
     'create_adducts_pos.R'
@@ -86,6 +87,7 @@ Collate:
     'export_spectra.R'
     'export_spectra_2.R'
     'extract_spectra.R'
+    'get_example_sirius.R'
     'get_file.R'
     'get_gnps_tables.R'
     'get_last_version_from_zenodo.R'
