--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(annotate_masses)
 export(annotate_spectra)
 export(clean_bio)
 export(clean_chemo)
+export(clean_collapse)
 export(complement_metadata_structures)
 export(create_adducts_neg)
 export(create_adducts_pos)
@@ -22,6 +23,7 @@ export(export_params)
 export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
+export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
 export(get_last_version_from_zenodo)
