--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
       - name: Install package
         run: |
           Rscript inst/scripts/install.R
