--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -32,6 +32,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          Ncpus: 2
       - name: Install package
         run: |
           Rscript inst/scripts/install.R
