--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,6 +27,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          Ncpus: 2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::covr
