--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -32,6 +32,9 @@ jobs:
         with:
           extra-packages: any::covr
           needs: coverage
+      - name: Install package
+        run: |
+          Rscript inst/scripts/install.R
       - name: Test coverage
         run: |
           covr::codecov(
